test/errors/type/collections/set/__bor1.yasl
echo collections.set().__bor(collections.set(), true)
